[#2] 헤더 li 반응형으로 변경

--- a/src/jinwoo.html
+++ b/src/jinwoo.html
@@ -18,7 +18,7 @@
     </nav>
 		</div>
 <div class="cat">
-    <img src="sool3.png" />
+    <!-- <img src="sool3.png" /> -->
 </div>
 <div class="main">
 <br><br>
